system/kube-system/traefik/templates/treafik-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-prometheus
  namespace: kube-system
  labels:
    app: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
  - port: 9100
    name: metrics
    targetPort: metrics
    protocol: TCP
